Fix extra spacing

--- a/public/viewer.css
+++ b/public/viewer.css
@@ -23,7 +23,8 @@ h2 {
 }
 
 ul {
-    padding: 0;
+    padding: 0.5em 0;
+    margin: 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
